egonlang-core/res/examples/invalid/prefix_expr_bang_on_number_expr.eg
!123;

// out: TypeError: mismatched types: expected type `bool` but received `number`